Fix anchor tag website word wrap in profile modal Closes #1840

--- a/app/assets/stylesheets/darkswarm/modal-enterprises.css.scss
+++ b/app/assets/stylesheets/darkswarm/modal-enterprises.css.scss
@@ -9,6 +9,9 @@
   p {
     margin-bottom: 0;
   }
+  a {
+    word-wrap: break-word;
+  }
 }
 
 .modal-header, p.modal-header {
